tdf#158532 sw: fix toolbar buttons remain disabled after pasting an image

Pasting an image and then quickly switching to text selection resulted
in e.g. the 'Insert Special Characters' toolbar button to remain
disabled, which is incorrect.

What happened is that the check in SwView::SelectShell() was poor, the
intent in commit 31cb5b5538b9fd91dafb067ce961f2540555ad2b (sw: fix
missing cache invalidation when switching between images, 2022-08-23)
was to handle the case when we switch between images, but it also
triggered for the case when we were switching from text to image.

Once the condition is fixed, an additional problem was that while
switching from text to image, m_nSelectionType is not yet updated, so
use IsSelFrameMode() instead, this way both the old and the new
use-cases work.

A testcase that covers this would look something like this:

    createSwDoc();
    SwDocShell* pDocShell = getSwDocShell();
    SwView* pView = pDocShell->GetView();

    pView->InsertGraphic(createFileURL(u"test.jpg"), OUString(), /*bAsLink=*/false,
                         &GraphicFilter::GetGraphicFilter());
    dispatchCommand(mxComponent, ".uno:Escape", {});

    std::unique_ptr<SfxPoolItem> pItem;
    SfxItemState eState = pView->GetViewFrame().GetBindings().QueryState(SID_INSERT_DIAGRAM, pItem);
    CPPUNIT_ASSERT_EQUAL(SfxItemState::DEFAULT, eState);

but for some reason that also passes without the fix, so probably this
change is hard to test from cppunit with reasonable amount of effort.

Change-Id: I16749455e093cecf17fa067d7ddf86cd007fd2d6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161579
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins